--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,13 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@book{petrov2019,
+  title={Database Internals: A deep dive into how distributed data systems work},
+  author={Petrov, Alex},
+  year={2019},
+  publisher={O'Reilly Media}
+}
+
 @article{fegaras2017,
   title={An algebra for distributed big data analytics},
   author={Fegaras, Leonidas},
